--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -729,6 +729,11 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:18.11}{}
 \begin{solution}{{18.11}}
+\begin{enumerate}
+\item $\E(\bar{X}_n) = \mu$, $\Var(\bar{X}_n) = \frac{\sigma^2}{n}$
+\item $\E(\bar{X}_n) = \mu$, $\Var(\bar{X}_n) = \frac{\sigma^2}{n} \cdot \frac{N-n}{N-1}$
+\item При $N\to \infty$ получится формула для выборки с возвращениями.
+\end{enumerate}
 \end{solution}
 \protect \hypertarget {soln:18.12}{}
 \begin{solution}{{18.12}}
@@ -777,6 +782,12 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:20.4}{}
 \begin{solution}{{20.4}}
+\begin{enumerate}
+\item $\chi^2_d$
+\item $d$
+\item $2d$
+\item $\chi^2_{a+b}$
+\end{enumerate}
 \end{solution}
 \protect \hypertarget {soln:20.5}{}
 \begin{solution}{{20.5}}
@@ -900,6 +911,16 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \end{solution}
 \protect \hypertarget {soln:22.21}{}
 \begin{solution}{{22.21}}
+\begin{enumerate}
+\item $\E(X_i) = a$, $\E(|X_i|) = 5a/4$
+\item $\hat a = 11/30$
+\item $\hat a = 26/75$
+\item $\hat{a}_{GMM} = 108/325$
+\item $\begin{pmatrix}
+37 & -44 \\
+-44 & 64
+\end{pmatrix}$
+\end{enumerate}
 \end{solution}
 \protect \hypertarget {soln:22.22}{}
 \begin{solution}{{22.22}}
@@ -1107,7 +1128,6 @@ $\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 \end{solution}
 \protect \hypertarget {soln:28.2}{}
 \begin{solution}{{28.2}}
-
 \end{solution}
 \protect \hypertarget {soln:28.3}{}
 \begin{solution}{{28.3}}
