--- a/notes/bayes_2_lectures/bayes_2_lectures.Rmd
+++ b/notes/bayes_2_lectures/bayes_2_lectures.Rmd
@@ -16,7 +16,7 @@ output:
   word_document: default
   html_document: default
 lang: ru-RU
-mainfont: Arial
+mainfont: Linux Libertine O
 fontsize: 11pt
 geometry: left=2cm, right=2cm, top=2cm, bottom=2cm
 documentclass: article
@@ -24,9 +24,9 @@ linkcolor: blue
 urlcolor: blue
 citecolor: blue
 header-includes:
-- \newfontfamily{\cyrillicfonttt}{Arial}
-- \newfontfamily{\cyrillicfont}{Arial}
-- \newfontfamily{\cyrillicfontsf}{Arial}
+- \newfontfamily{\cyrillicfonttt}{Linux Libertine O}
+- \newfontfamily{\cyrillicfont}{Linux Libertine O}
+- \newfontfamily{\cyrillicfontsf}{Linux Libertine O}
 editor_options: 
   chunk_output_type: console
 ---
@@ -47,6 +47,14 @@ editor_options:
 Если к этим двум предположениям добавить сами наблюдения $Y_1$, $Y_2$, \ldots, $Y_n$, то по формуле условной вероятности можно получить вывод:
 
 1. Мнение о неизвестном параметре $\theta$ с учётом полученных наблюдений. Это апостериорный закон распределения.
+
+Байесовский подход - это модно, стильно и молодёжно!
+
+Фейсбук прогнозирует дневные данные с помощью байесовского алгоритма [facebook.github.io/prophet/](https://facebook.github.io/prophet/). 
+
+А вот целая летняя школа: [habr.com/post/337028/](https://habr.com/post/337028/).
+
+И да, пара вопросиков в экзамен войдёт :)
 
 ## Первая задача
 
@@ -124,7 +132,9 @@ f(p \mid \text{Данные }) =
 При этом есть два популярных варианта:
 
 - симметрично по вероятности интервалы: слева от $a$ оказывается такая же вероятность, как справа от $b$;
-- HPD-интервал (highest probability density): интервал строится так, чтобы плотность на отрезке $[a;b]$ была выше, чем за отрезком $[a;b]$. Если апостериорное распределение не симметричное, то HPD интервал может оказаться существенно короче.
+- HPD-интервал (highest probability density): для распределения с одной модой интервал строится так, чтобы плотность на отрезке $[a;b]$ была выше, чем за отрезком $[a;b]$. 
+
+Если апостериорное распределение не симметричное, то HPD интервал может оказаться существенно короче симметричного по вероятности. А если апостериорное распределение бимодальное, то HPD-интервал вовсе и не интервал :), а будет состоять из двух кусков.
 
 
 # Всё не так просто!
@@ -160,7 +170,27 @@ f(p \mid \text{Данные }) =
 Шаг 3. Пока не получилась достаточно большая выборка переходим к шагу 2.
 
 
+Упражнения 1. Историческая задача от сэра Томаса Байеса
 
+Два игрока, А и Б, играют друг с другом. Ничья невозможна. Изначально считаем, что вероятность выигрыша игрока А равна $p$ и она распределена равномерна на $[0;1]$. Игрок А выиграл пять партий у игрока Б из пяти сыгранных.
+
+- Найдите апостериорную плотность $p$;
+- Найдите апостериорную и априорную вероятность того, что игрок А выиграет следующую партию?
+- Восхититесь Байесом, который решал эту задачу не зная интегралов и на старо-английском :)
+
+Упражнение 2. 
+
+Для апостериорной плотности
+\[
+f(p \mid \text{Данные }) =
+\begin{cases}
+12p^2 (1-p), \text{ если } p \in [0;1] \\
+0, \text{ иначе}
+\end{cases}
+\]
+
+- Найдите правую границу байесовского доверительного HPD-интервала, начинающегося в точке $p=0.1$;
+- Какой уровень доверия у этого байесовского интервала?
 
 # Алгоритм Метрополиса-Гастингса
 
