--- a/notes/bayes_2_lectures/bayes_2_lectures.tex
+++ b/notes/bayes_2_lectures/bayes_2_lectures.tex
@@ -13,7 +13,7 @@
     \usepackage{fontspec}
   \fi
   \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
-    \setmainfont[]{Arial}
+    \setmainfont[]{Linux Libertine O}
 \fi
 % use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
@@ -94,9 +94,9 @@
   \postdate{\par}
   \date{10/9/2017}
 
-\newfontfamily{\cyrillicfonttt}{Arial}
-\newfontfamily{\cyrillicfont}{Arial}
-\newfontfamily{\cyrillicfontsf}{Arial}
+\newfontfamily{\cyrillicfonttt}{Linux Libertine O}
+\newfontfamily{\cyrillicfont}{Linux Libertine O}
+\newfontfamily{\cyrillicfontsf}{Linux Libertine O}
 
 \begin{document}
 \maketitle
@@ -135,6 +135,16 @@
   Мнение о неизвестном параметре \(\theta\) с учётом полученных
   наблюдений. Это апостериорный закон распределения.
 \end{enumerate}
+
+Байесовский подход - это модно, стильно и молодёжно!
+
+Фейсбук прогнозирует дневные данные с помощью байесовского алгоритма
+\href{https://facebook.github.io/prophet/}{facebook.github.io/prophet/}.
+
+А вот целая летняя школа:
+\href{https://habr.com/post/337028/}{habr.com/post/337028/}.
+
+И да, пара вопросиков в экзамен войдёт :)
 
 \subsection{Первая задача}\label{-}
 
@@ -247,11 +257,15 @@ f(p \mid \text{Данные }) =
   симметрично по вероятности интервалы: слева от \(a\) оказывается такая
   же вероятность, как справа от \(b\);
 \item
-  HPD-интервал (highest probability density): интервал строится так,
-  чтобы плотность на отрезке \([a;b]\) была выше, чем за отрезком
-  \([a;b]\). Если апостериорное распределение не симметричное, то HPD
-  интервал может оказаться существенно короче.
+  HPD-интервал (highest probability density): для распределения с одной
+  модой интервал строится так, чтобы плотность на отрезке \([a;b]\) была
+  выше, чем за отрезком \([a;b]\).
 \end{itemize}
+
+Если апостериорное распределение не симметричное, то HPD интервал может
+оказаться существенно короче симметричного по вероятности. А если
+апостериорное распределение бимодальное, то HPD-интервал вовсе и не
+интервал :), а будет состоять из двух кусков.
 
 \section{Всё не так просто!}\label{---}
 
@@ -303,6 +317,44 @@ f(p \mid \text{Данные }) =
 \(f(\theta_3|\theta_1 = \theta_1^{(i+1)}, \theta_2 = \theta_2^{(i+1)}, \text{Данные})\).
 
 Шаг 3. Пока не получилась достаточно большая выборка переходим к шагу 2.
+
+Упражнения 1. Историческая задача от сэра Томаса Байеса
+
+Два игрока, А и Б, играют друг с другом. Ничья невозможна. Изначально
+считаем, что вероятность выигрыша игрока А равна \(p\) и она
+распределена равномерна на \([0;1]\). Игрок А выиграл пять партий у
+игрока Б из пяти сыгранных.
+
+\begin{itemize}
+\tightlist
+\item
+  Найдите апостериорную плотность \(p\);
+\item
+  Найдите апостериорную и априорную вероятность того, что игрок А
+  выиграет следующую партию?
+\item
+  Восхититесь Байесом, который решал эту задачу не зная интегралов и на
+  старо-английском :)
+\end{itemize}
+
+Упражнение 2.
+
+Для апостериорной плотности \[
+f(p \mid \text{Данные }) =
+\begin{cases}
+12p^2 (1-p), \text{ если } p \in [0;1] \\
+0, \text{ иначе}
+\end{cases}
+\]
+
+\begin{itemize}
+\tightlist
+\item
+  Найдите правую границу байесовского доверительного HPD-интервала,
+  начинающегося в точке \(p=0.1\);
+\item
+  Какой уровень доверия у этого байесовского интервала?
+\end{itemize}
 
 \section{Алгоритм Метрополиса-Гастингса}\label{--}
 
