add triangle plot

--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -762,13 +762,15 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:20.1}{}
 \begin{solution}{{20.1}}
-Здесь потребуется формула для $S=1^2+2^2 + \ldots + n^2$. Из рисунка
+Здесь потребуется формула для $S=1^2+2^2 + \ldots + n^2$.
 
-\begin{minipage}{0.5\textwidth}
+На рисунке сложены три суммы:
+
+\begin{minipage}{0.8\textwidth}
 \includegraphics[width=\textwidth]{figure/triangle-proof.png}
 \end{minipage}
 
-видно, что
+На языке формул:
 \[
   3S = (2n+1) \cdot (1 + 2 + \ldots + n) = (2n+1)n\frac{n+1}{2}.
 \]
