--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -1,5 +1,5 @@
 
-@book{феллер2013введение,
+@book{feller2013vvedenie,
   title={Введение в теорию вероятностей и ее приложения},
   author={Феллер, Вильям},
   year={2010},
@@ -8,7 +8,7 @@
   addendum={Очень старый и очень классный учебник по теории вероятностей в двух томах}
 }
 
-@book{секей2013парадоксы,
+@book{sekey2013paradoxes,
   title={Парадоксы в теории вероятностей и математической статистике},
   author={Секей, Габор},
   year={1990},
