--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2904,13 +2904,15 @@ Y
   \end{enumerate}
 
 \begin{sol}
-Здесь потребуется формула для $S=1^2+2^2 + \ldots + n^2$. Из рисунка
+Здесь потребуется формула для $S=1^2+2^2 + \ldots + n^2$.
 
-\begin{minipage}{0.5\textwidth}
+На рисунке сложены три суммы:
+
+\begin{minipage}{0.8\textwidth}
 \includegraphics[width=\textwidth]{figure/triangle-proof.png}
 \end{minipage}
 
-видно, что
+На языке формул:
 \[
   3S = (2n+1) \cdot (1 + 2 + \ldots + n) = (2n+1)n\frac{n+1}{2}.
 \]
