--- a/title_bor_utf8_knitr.tex
+++ b/title_bor_utf8_knitr.tex
@@ -24,7 +24,6 @@
 
 
 
-
 % специальная версия для knitr'а. Исключает graphicx
 
 %\usepackage{showkeys} % показывать метки в готовом pdf
@@ -35,19 +34,22 @@
 %\usepackage{mathtext} % русские буквы в формулах? (и без неё работает)
 % Например, $x_{\text{один}}$
 
-%\usepackage{cmap} % для поиска русских слов в pdf --- теперь работает без этого
-% а с cmap не работает печать на принтер ;)
+
 \usepackage{verbatim} % для многострочных комментариев
 \usepackage{makeidx} % для создания предметных указателей
-\usepackage[X2, T2A]{fontenc}
-\usepackage[utf8]{inputenc} % задание utf8 кодировки исходного tex файла
+
+
+
 \usepackage{setspace}
 \usepackage{amsmath, amsfonts, amssymb, amsthm}
 \usepackage{mathrsfs} % sudo yum install texlive-rsfs
 \usepackage{dsfont} % sudo yum install texlive-doublestroke
 \usepackage{array, multicol, multirow, bigstrut} % sudo yum install texlive-multirow
 \usepackage{indentfirst} % установка отступа в первом абзаце главы
-\usepackage[russian]{babel} % выбор языка для документа
+
+
+
+
 \usepackage{bm}
 \usepackage{bbm} % шрифт с двойными буквами
 %\usepackage[perpage]{footmisc}
@@ -55,11 +57,12 @@
 \usepackage{dcolumn} % центрирование по разделителю для apsrtable
 
 % создание гиперссылок в pdf
-\usepackage[pdftex, unicode, colorlinks=true, urlcolor=blue, hyperindex, breaklinks]{hyperref}
+\usepackage[unicode, colorlinks=true, urlcolor=blue, hyperindex, breaklinks]{hyperref}
 
-% свешиваем пунктуацию
+
+\usepackage{microtype} % свешиваем пунктуацию
 % теперь знаки пунктуации могут вылезать за правую границу текста, при этом текст выглядит ровнее
-\usepackage{microtype}
+
 
 \usepackage{textcomp}  % Чтобы в формулах можно было русские буквы писать через \text{}
 
@@ -79,7 +82,7 @@
 %  например \begin{enumerate}[resume] позволяет продолжить нумерацию в новом списке
 
 \usepackage{mathtools}
-\usepackage{cancel,xspace} % sudo yum install texlive-cancel
+\usepackage{cancel, xspace} % sudo yum install texlive-cancel
 
 % \usepackage{minted} % display program code with syntax highlighting
 % требует установки pygments и python
@@ -87,7 +90,6 @@
 \usepackage{numprint} % sudo yum install texlive-numprint
 \npthousandsep{,}\npthousandthpartsep{}\npdecimalsign{.}
 
-\usepackage{embedfile} % Чтобы код LaTeXа включился как приложение в PDF-файл
 
 \usepackage{subfigure} % для создания нескольких рисунков внутри одного
 
@@ -102,8 +104,8 @@
 % \listoftodos --- печатает все поставленные \todo'шки
 
 
-% более красивые таблицы
-\usepackage{booktabs}
+
+\usepackage{booktabs} %  красивые таблицы
 % заповеди из докупентации:
 % 1. Не используйте вертикальные линни
 % 2. Не используйте двойные линии
@@ -111,6 +113,22 @@
 % 4. Не сокращайте .1 вместо 0.1
 % 5. Повторяющееся значение повторяйте, а не говорите "то же"
 
+
+\usepackage{fontspec} % что-то про шрифты?
+\usepackage{polyglossia} % русификация xelatex
+
+\setmainlanguage{russian}
+\setotherlanguages{english}
+
+% download "Linux Libertine" fonts:
+% http://www.linuxlibertine.org/index.php?id=91&L=1
+\setmainfont{Linux Libertine O} % or Helvetica, Arial, Cambria
+% why do we need \newfontfamily:
+% http://tex.stackexchange.com/questions/91507/
+\newfontfamily{\cyrillicfonttt}{Linux Libertine O}
+
+\AddEnumerateCounter{\asbuk}{\russian@alph}{щ} % для списков с русскими буквами
+\setlist[enumerate, 2]{label=\asbuk*),ref=\asbuk*}
 
 
 %\usepackage{asymptote} % пакет для рисовки графики, должен идти после graphics
@@ -127,12 +145,6 @@
 \fi
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-%%%%%%%%%%%%%%%%%%%%%%%  Внедрение tex исходников в pdf файл  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\embedfile[desc={Main tex file}]{\jobname.tex} % Включение кода в выходной файл
-\embedfile[desc={title_bor}]{title_bor_utf8_knitr.tex}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 
