--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3120,10 +3120,16 @@ $\Var(\langle Z, z\rangle)=1$; $\Cov(\hat Z_i, \hat Z_j)=v_i v_j \Var( \langle Z
 \end{problem}
 \begin{problem}
  Задача о немецких танках
-\footnote{Незадолго до высадки союзников в Нормандии, 6 июня 1944 года, в распоряжении союзников было всего два (!) немецких танка «Пантера V». По серийным номерам на шасси танков союзники оценили выпуск в феврале 1944 в 270 танков. Фактический выпуск «Пантер V» согласно немецким документам в феврале 1944 составил 276 танков, %\autocite{ruggles1947empirical}.
+\footnote{Незадолго до высадки союзников в Нормандии, 6 июня 1944 года,
+в распоряжении союзников было всего два (!) немецких танка «Пантера V».
+По серийным номерам на шасси танков союзники оценили выпуск в феврале 1944 в 270 танков.
+Фактический выпуск «Пантер V» согласно немецким документам в феврале 1944 составил 276 танков,
+\cite{ruggles1947empirical}.
 }
 
-Предположим, что все выпущенные танки имеют порядковый номер. От самого первого выпущенного танка, имеющего номер $1$, до самого последнего танка, имеющего номер $n$. В бою удалось подбить танки с номерами $15$, $29$ и $23$.
+Предположим, что все выпущенные танки имеют порядковый номер.
+От самого первого выпущенного танка, имеющего номер $1$, до самого последнего танка, имеющего номер $n$.
+В бою удалось подбить танки с номерами $15$, $29$ и $23$.
 
 \begin{enumerate}
 \item Постройте оценку количества танков методом моментов
