--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -96,15 +96,20 @@ style=alphabetic]{biblatex}
 Задачи:
 
 \begin{problem}
- В вазе пять неотличимых с виду конфет. Две без ореха и три — с орехом. Маша ест конфеты выбирая их наугад до тех пор, пока не съест первую конфету с орехом. Обозначим $X$ — число съеденных конфет. Найдите $\P(X=2)$, $\P(X>1)$, $\E(X)$
+В вазе пять неотличимых с виду конфет.
+Две без ореха и три — с орехом. Маша ест конфеты выбирая их наугад до тех пор,
+пока не съест первую конфету с орехом. Обозначим $X$ — число съеденных конфет.
+Найдите $\P(X=2)$, $\P(X>1)$, $\E(X)$
 
 
 \begin{sol}
   $\P(X=1)=3/5$, $\P(X=2)=3/10$, $\P(X=3)=1/10$, $\E(X)=1.5$
 \end{sol}
 \end{problem}
+
 \begin{problem}
- В коробке находится четыре внешне одинаковые лампочки,  две из них исправны. Лампочки извлекают из коробки по одной до тех пор, пока не будут извлечены обе исправные.
+В коробке находится четыре внешне одинаковые лампочки,  две из них исправны.
+Лампочки извлекают из коробки по одной до тех пор, пока не будут извлечены обе исправные.
 \begin{enumerate}
 \item Какова вероятность того, что опыт закончится извлечением трёх лампочек?
 \item Каково ожидаемое количество извлеченных лампочек?
@@ -113,15 +118,26 @@ style=alphabetic]{biblatex}
 \begin{sol}
 \end{sol}
 \end{problem}
-\begin{problem}
- Маша подкидывает монетку. Если она выпадает орлом, то Маша подкидывает монетку ещё один раз, если решкой — то ещё два раза. После этого Маша идёт в кино! Пусть $X$ — количество выпавших орлов. Найдите вероятности $\P(X=0)$, $\P(X=1)$, \ldots и ожидание $\E(X)$.
 
+\begin{problem}
+Маша подкидывает монетку. Если в первый раз монетка выпала орлом, то Маша подкидывает монетку ещё один раз,
+если решкой — то ещё два раза. После этого Маша идёт в кино!
+Пусть $X$ — количество выпавших орлов.
+
+Найдите вероятности $\P(X=0)$, $\P(X=1)$, \ldots и ожидание $\E(X)$.
 
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
- Две команды равной силы играют в волейбол до трёх побед одной из них, не обязательно подряд. Ничья невозможна. Из-за равенства сил будем считать, что вероятность победы каждой равна $0.5$. Величина $N$ — количество сыгранных партий. Составьте табличку возможных значений $N$ с их вероятностями. Найдите $\P(N \text{ — чётное})$, $\E(N)$
+Две команды равной силы играют в волейбол до трёх побед одной из них,
+не обязательно подряд. Ничья невозможна. Из-за равенства сил будем считать,
+что вероятность победы каждой равна $0.5$. Величина $N$ — количество сыгранных партий.
+
+Составьте табличку возможных значений $N$ с их вероятностями.
+
+Найдите $\P(N \text{ — чётное})$, $\E(N)$
 
 
 \begin{sol}
@@ -130,6 +146,7 @@ style=alphabetic]{biblatex}
   2/8 3/8 3/8
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Какова вероятность того, что у 30 человек не будет ни одного
 совпадения дней рождений? Сколько человек должно собраться, чтобы вероятность совпадения дней рождения превысила $1/2$? Сколько в среднем человек должно войти в комнату, чтобы впервые произошло совпадения дней рождения?
@@ -157,8 +174,12 @@ style=alphabetic]{biblatex}
   E(N)=10/7, E(G)=1, E(R)=10/7-1=3/7
 \end{sol}
 \end{problem}
+
 \begin{problem}
- Вы играете в следующую игру. Кубик подкидывается неограниченное число раз. Если на кубике выпадает 1, 2 или 3, то соответствующее количество монет добавляется на кон. Если выпадает 4 или 5, то игра оканчивается и Вы получаете сумму, лежащую на кону. Если выпадает 6, то игра оканчивается, а Вы не получаете ничего. Изначально на кону лежит ноль рублей.
+ Вы играете в следующую игру. Кубик подкидывается неограниченное число раз.
+ Если на кубике выпадает 1, 2 или 3, то соответствующее количество монет добавляется на кон.
+ Если выпадает 4 или 5, то игра оканчивается и Вы получаете сумму, лежащую на кону.
+ Если выпадает 6, то игра оканчивается, а Вы не получаете ничего. Изначально на кону лежит ноль рублей.
 \begin{enumerate}
 \item Какова вероятность того, что игра рано или поздно закончится выпадением 6-ки?
 \item Какова ожидаемая продолжительность игры?
@@ -170,6 +191,7 @@ style=alphabetic]{biblatex}
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Саша и Маша подкидывают монетку до тех пор, пока не выпадет
 последовательность РОО или ОOР. Если игра закончится выпадением
@@ -180,11 +202,11 @@ style=alphabetic]{biblatex}
 \item Решите аналогичную задачу для ОРО и ООР.
 \end{enumerate}
 
-
 \begin{sol}
   у Саши 3/4
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Вася подкидывает кубик до тех пор, пока на кубике не выпадет единица, или пока он сам не скажет «Стоп». Вася получает столько рублей, сколько выпало на кубике при последнем броске. Вася хочет максимизировать свой ожидаемый выигрыш.
 \begin{enumerate}
@@ -194,11 +216,11 @@ style=alphabetic]{biblatex}
 подбрасывание Вася платит 35 копеек?
 \end{enumerate}
 
-
 \begin{sol}
   стоп на 4-5-6 или стоп на 5-6
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Саша и Маша решили, что будут заводить новых детей до тех пор, пока в их семье не будут дети обоих полов. Обозначим $X$ — количество детей в их семье. Найдите $\P(X=4)$, $\E(X)$.
 
@@ -207,6 +229,8 @@ style=alphabetic]{biblatex}
   $\P(X=4)=1/8$, $\E(X)=3$
 \end{sol}
 \end{problem}
+
+
 \begin{problem}
  В каждой вершине треугольника по ёжику. Каждую минуту с вероятностью $0.7$ каждый ежик
 независимо от других двигается по часовой стрелке, с вероятностью
@@ -275,6 +299,7 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
   $\E(Y)=0.25\cdot 0 + 0.5\cdot (\E(Y)+1)+0.25\cdot (\E(Y)+1)$
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Вам предложена следующая игра. Изначально на кону 0 рублей. Раз за разом подбрасывается правильная монетка. Если она выпадает орлом, то казино добавляет на кон 100 рублей. Если монетка выпадает решкой, то все деньги, лежащие на кону, казино забирает себе, а Вы получаете красную карточку. Игра прекращается либо когда Вы получаете третью красную карточку, либо в любой момент времени до этого по Вашему выбору. Если Вы решили остановить игру до получения трех красных карточек, то Ваш выигрыш равен сумме на кону. При получении третьей красной карточки игра заканчивается и Вы не получаете ничего. Вы заинтересованы в максимальном среднем выигрыше.
 \begin{enumerate}
@@ -289,6 +314,7 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
  стратегия 2: если нет красных карточек или одна, то останавливаться при 200 рублях, а при двух карточках останавливаться на 100 рублях.
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Есть три комнаты. В первой из них лежит сыр. Если мышка
 попадает в первую комнату, то она находит сыр через одну минуту.
@@ -302,12 +328,24 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
- Илье Муромцу предстоит дорога к камню. От камня начинаются ещё три дороги. Каждая из тех дорог снова оканчивается камнем. И от каждого камня начинаются ещё три дороги. И каждые те три дороги оканчиваются камнем\ldots И так далее до бесконечности. На каждой дороге живёт трёхголовый Змей Горыныч. Каждый Змей Горыныч бодрствует независимо от других с вероятностью (хм, Вы не поверите!) одна третья. У Василисы Премудрой существует Чудо-Карта, на которой видно, какие Змеи Горынычи бодрствуют, а какие — нет. Какова вероятность того, что Василиса Премудрая сможет найти на карте  бесконечный жизненный путь Ильи Муромца проходящий исключительно мимо спящих Змеев Горынычей?
+Илье Муромцу предстоит дорога к камню. От камня начинаются ещё три дороги.
+Каждая из тех дорог снова оканчивается камнем. И от каждого камня начинаются ещё три дороги.
+И каждые те три дороги оканчиваются камнем\ldots И так далее до бесконечности.
+На каждой дороге живёт трёхголовый Змей Горыныч.
+Каждый Змей Горыныч бодрствует независимо от других с вероятностью (хм, Вы не поверите!) одна третья.
+У Василисы Премудрой существует Чудо-Карта, на которой видно,
+какие Змеи Горынычи бодрствуют, а какие — нет.
+
+Какова вероятность того,
+что Василиса Премудрая сможет найти на карте
+бесконечный жизненный путь Ильи Муромца проходящий исключительно мимо спящих Змеев Горынычей?
 
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
  У Пети — монетка, выпадающая орлом с вероятностью $ p\in (0;1) $. У Васи — с вероятностью $1/2$. Они одновременно подбрасывают свои монетки до тех пор, пока у них не окажется набранным одинаковое количество орлов. В частности, они останавливаются после первого подбрасывания, если оно дало одинаковые результаты. Сколько в среднем раз им придётся подбросить монетку?
 
@@ -4527,6 +4565,15 @@ h_1(t) = 0.7t + 0.3th^2_1(t)
 \begin{enumerate}
 
   \item Оценка $\hat a$ неизвестного параметра $a$ называется \textit{несмещённой}, если $\E(\hat a) = a$.
+
+  \item Последовательность случайных величин $R_1$, $R_2$, \ldots сходится к величине $R$ по вероятности, если
+  для любого положительного числа $\varepsilon >0$ вероятность отклонения $R_i$ от $R$ больше, чем на $\varepsilon$, стремится к нулю:
+  \[
+  \P(|X_n - X| > \varepsilon ) \to 0, \; \forall \varepsilon > 0
+  \]
+
+Сходимость по вероятности обозначается с помощью оператора $\plim$, $\plim_{n\to\infty} R_n = R$:
+
 
   \item Последовательность оценок $\hat a_1$, $\hat a_2$, \ldots неизвестного параметра $a$ называется \textit{состоятельной}, если $\plim \hat a_n = a$.
 
