--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -121,7 +121,7 @@ style=alphabetic]{biblatex}
 
 \begin{problem}
 Маша подкидывает монетку. Если в первый раз монетка выпала орлом, то Маша подкидывает монетку ещё один раз,
-если решкой — то ещё два раза. После этого Маша идёт в кино!
+если решкой — то ещё два раза. Больше Маша монетку не подкидывает!
 Пусть $X$ — количество выпавших орлов.
 
 Найдите вероятности $\P(X=0)$, $\P(X=1)$, \ldots и ожидание $\E(X)$.
@@ -154,24 +154,32 @@ style=alphabetic]{biblatex}
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Саша и Маша по очереди подбрасывают кубик до первой шестёрки. Посуду будет
 мыть тот, кто первым выбросит шестерку. Маша бросает кубик первой.
 Какова вероятность того, что посуду будет мыть Маша? Сколько в среднем раз они будут бросать кубик?
 
 \begin{sol}
-  5/11 и 6/11
+ $6/11$, $6$
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Неправильную монетку с вероятностью «орла» равной $0.7$ подбрасывают до первого «орла».
  Чему равно среднее количество подбрасываний?  Орлов? Решек? Какова вероятность чётного числа бросков? Как изменятся ответы, если вероятность орла будет равна $p$?
 
 
 \begin{sol}
-  N — количество подбрасываний, G — количество орлов, R — решек
+  $N$ — количество подбрасываний, $G$ — количество орлов, $R$ — решек
 
-  E(N)=10/7, E(G)=1, E(R)=10/7-1=3/7
+  $\E(N)=10/7$, $\E(G)=1$, $\E(R)=10/7-1=3/7$
+
+  Для вероятности чётного числа бросков можно сложить ряд или составить уравнение.
+  Если выпала решка, то в продолжении игры мы хотим получить нечётное количество бросков.
+  \[
+     v = 0.7 \cdot 0 + 0.3 \cdot (1-v)
+  \]
 \end{sol}
 \end{problem}
 
@@ -183,9 +191,10 @@ style=alphabetic]{biblatex}
 \begin{enumerate}
 \item Какова вероятность того, что игра рано или поздно закончится выпадением 6-ки?
 \item Какова ожидаемая продолжительность игры?
-\item Чему равен ожидаемый выигрыш в эту игру?
-\item Чему равен ожидаемый выигрыш в эту игру, если изначально на кону лежит 100 рублей?
-\item Изменим условие: если выпадает 5, то сумма на кону сгорает, а игра продолжается. Как изменятся ответы на предыдущие вопросы?
+\item Чему равен ожидаемый выигрыш?
+\item Чему равен ожидаемый выигрыш, если изначально на кону лежит 100 рублей?
+\item Изменим изначальное условие: если выпадает 5, то сумма на кону сгорает, а игра продолжается.
+Чему будет равен средний выигрыш в новую игру?
 \end{enumerate}
 
 \begin{sol}
@@ -222,8 +231,9 @@ style=alphabetic]{biblatex}
 \end{problem}
 
 \begin{problem}
- Саша и Маша решили, что будут заводить новых детей до тех пор, пока в их семье не будут дети обоих полов. Обозначим $X$ — количество детей в их семье. Найдите $\P(X=4)$, $\E(X)$.
-
+ Саша и Маша решили, что будут заводить новых детей до тех пор,
+ пока в их семье не будут дети обоих полов. Обозначим $X$ — количество детей в их семье.
+ Найдите $\P(X=4)$, $\E(X)$.
 
 \begin{sol}
   $\P(X=4)=1/8$, $\E(X)=3$
@@ -232,9 +242,15 @@ style=alphabetic]{biblatex}
 
 
 \begin{problem}
- В каждой вершине треугольника по ёжику. Каждую минуту с вероятностью $0.7$ каждый ежик
+В каждой вершине треугольника по ёжику. Каждую минуту с вероятностью $0.5$ каждый ежик
 независимо от других двигается по часовой стрелке, с вероятностью
-$0.3$ — против часовой стрелки. Обозначим $T$ — время до встречи всех ежей в одной вершине. Найдите $\P(T=1)$, $\P(T=2)$, $\P(T=3)$, $\E(T)$.
+$0.5$ — против часовой стрелки.
+Обозначим $T$ — время до встречи всех ежей в одной вершине.
+
+\begin{enumerate}
+  \item Найдите $\P(T=1)$, $\P(T=2)$, $\P(T=3)$, $\E(T)$.
+  \item Как изменятся ответы, если вероятность движения по часовой стрелке равна $p$?
+\end{enumerate}
 
 \begin{sol}
 \end{sol}
