--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -19,13 +19,19 @@
 \end{solution}
 \protect \hypertarget {soln:1.6}{}
 \begin{solution}{{1.6}}
-  5/11 и 6/11
+ $6/11$, $6$
 \end{solution}
 \protect \hypertarget {soln:1.7}{}
 \begin{solution}{{1.7}}
-  N — количество подбрасываний, G — количество орлов, R — решек
+  $N$ — количество подбрасываний, $G$ — количество орлов, $R$ — решек
 
-  E(N)=10/7, E(G)=1, E(R)=10/7-1=3/7
+  $\E(N)=10/7$, $\E(G)=1$, $\E(R)=10/7-1=3/7$
+
+  Для вероятности чётного числа бросков можно сложить ряд или составить уравнение.
+  Если выпала решка, то в продолжении игры мы хотим получить нечётное количество бросков.
+  \[
+     v = 0.7 \cdot 0 + 0.3 \cdot (1-v)
+  \]
 \end{solution}
 \protect \hypertarget {soln:1.8}{}
 \begin{solution}{{1.8}}
