--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -112,7 +112,7 @@
 \end{solution}
 \protect \hypertarget {soln:3.2}{}
 \begin{solution}{{3.2}}
-  $A$ -- первый охотник попал в утку, $B$ — в утку попала ровно одна пуля
+  $A$ — первый охотник попал в утку, $B$ — в утку попала ровно одна пуля
 
   $\P(A \mid B)=\frac{\P(A \cap B)}{\P(B)}= \frac{0.4 \cdot 0.3 }{0.4\cdot 0.3 + 0.6\cdot 0.7}=2/9$
 \end{solution}
