--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -306,7 +306,9 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 \end{sol}
 \end{problem}
 \begin{problem}
- Suppose the probability to get a head when throwing an unfair coin is $p$, what's the expected number of throwings in order to get two consecutive heads? The expected number of tails?
+ Suppose the probability to get a head when throwing an unfair coin is $p$,
+ what's the expected number of throwings in order to get two consecutive heads?
+ The expected number of tails?
 
 
 \begin{sol}
@@ -363,7 +365,11 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 \end{problem}
 
 \begin{problem}
- У Пети — монетка, выпадающая орлом с вероятностью $ p\in (0;1) $. У Васи — с вероятностью $1/2$. Они одновременно подбрасывают свои монетки до тех пор, пока у них не окажется набранным одинаковое количество орлов. В частности, они останавливаются после первого подбрасывания, если оно дало одинаковые результаты. Сколько в среднем раз им придётся подбросить монетку?
+ У Пети — монетка, выпадающая орлом с вероятностью $ p\in (0;1) $.
+ У Васи — с вероятностью $1/2$. Они одновременно подбрасывают свои монетки до тех пор,
+ пока у них не окажется набранным одинаковое количество орлов.
+ В частности, они останавливаются после первого подбрасывания,
+ если оно дало одинаковые результаты. Сколько в среднем раз им придётся подбросить монетку?
 
 \begin{sol}
 \end{sol}
@@ -414,43 +420,42 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 подкидывает её два раза. Оба раза выпадает «орел». Какова
 условная вероятность того, что монетка «неправильная»?
 
-
 \begin{sol}
   $\P(A\mid B)=\frac{\P(A \cap B)}{\P(B)}= \frac{1/3}{1/6+1/3}=2/3$
 \end{sol}
 \end{problem}
+
 \begin{problem}
   Два охотника одновременно выстрелили в одну утку. Первый попадает с
-вероятностью 0.4, второй — с вероятностью 0.7.
+вероятностью 0.4, второй — с вероятностью 0.7 независимо от первого.
 \begin{enumerate}
 \item Какова вероятность того, что в утку попала ровно одна пуля?
 \item  Какова условная вероятность того, что утка была убита первым
 охотником, если в утку попала ровно одна пуля?
 \end{enumerate}
 
-
 \begin{sol}
-  $A$ -- первый охотник попал в утку, $B$ — в утку попала ровно одна пуля
+  $A$ — первый охотник попал в утку, $B$ — в утку попала ровно одна пуля
 
   $\P(A \mid B)=\frac{\P(A \cap B)}{\P(B)}= \frac{0.4 \cdot 0.3 }{0.4\cdot 0.3 + 0.6\cdot 0.7}=2/9$
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Кубик подбрасывается два раза. Найдите вероятность получить
 сумму равную 8, если при первом броске выпало 3.
-
 
 \begin{sol}
   $\P(A \mid B)=1/6$
 \end{sol}
 \end{problem}
+
 \begin{problem}
- Игрок получает 13 карт из колоды в 52 карты.
+Игрок получает 13 карт из колоды в 52 карты.
 Какова вероятность, что у него как минимум два туза, если
 известно, что у него есть хотя бы один туз?
 Какова вероятность того, что у него как минимум два туза, если
 известно, что у него есть туз пик?
-
 
 \begin{sol}
 \[
@@ -468,12 +473,12 @@ $\P(X\geq 2 \mid X\geq 1)=\frac{\P(X \geq 2)}{\P(X \geq 1)}= \approx 0.37$
   $\P(A \mid B)=\frac{\P(A \cap B)}{\P(B)}= \frac{7\cdot 11 /C_{7+5+11}^2}{(7\cdot 11+5\cdot 11 + 7\cdot 5) /C_{7+5+11}^2 }$
 \end{sol}
 \end{problem}
+
 \begin{problem}
   В урне 5 белых и 11 черных шаров. Два шара извлекаются по
 очереди. Какова вероятность того, что второй шар будет черным?
 Какова вероятность того, что первый шар — белый, если известно,
 что второй шар — черный?
-
 
 \begin{sol}
   $B$ — событие, второй — черный, $\P(B)=11/16$
@@ -481,6 +486,7 @@ $\P(X\geq 2 \mid X\geq 1)=\frac{\P(X \geq 2)}{\P(X \geq 1)}= \approx 0.37$
   $\P(A \mid B)=\P(A \cap B)/\P(B)=\frac{\frac{5}{16}\frac{11}{15}}{11/16}$
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Примерно 4\% коров заражены «коровьим бешенством».  Имеется тест, который дает ошибочный результат с вероятностью 0,1. Судя по тесту, новая партия мяса заражена. Какова вероятность того, что она действительно заражена?
 
@@ -490,12 +496,12 @@ $\P(X\geq 2 \mid X\geq 1)=\frac{\P(X \geq 2)}{\P(X \geq 1)}= \approx 0.37$
   $\P(A \mid B)=\P(A \cap B)/\P(B)=\frac{0.04\cdot 0.9}{0.04\cdot 0.9+0.96\cdot 0.1}\approx 0.27$
 \end{sol}
 \end{problem}
+
 \begin{problem}
  В школе три девятых класса, «А», «Б» и «В», одинаковые по
 численности. В «А» классе 30\% обожают учителя географии, в «Б»
 классе — 40\% и в «В» классе — 70\%. Девятиклассник Петя обожает
 учителя географии. Какова вероятность того, что он из «Б» класса?
-
 
 \begin{sol}
   $A$ — Петя из Б класса, $B$ — Петя обожает географию
@@ -503,6 +509,7 @@ $\P(X\geq 2 \mid X\geq 1)=\frac{\P(X \geq 2)}{\P(X \geq 1)}= \approx 0.37$
   $\P(A \mid B)=\P(A \cap B)/\P(B)=\frac{0.4/3}{0.3/3+0.4/3+0.7/3}=2/7$
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Ген карих глаз доминирует ген синих. Следовательно, у носителя пары bb
 глаза синие, а у носителя пар BB и Bb — карие. У диплоидных
@@ -511,30 +518,30 @@ $\P(X\geq 2 \mid X\geq 1)=\frac{\P(X \geq 2)}{\P(X \geq 1)}= \approx 0.37$
 синеглазый. Кареглазый женился на синеглазой девушке. Какова
 вероятность рождения у них синеглазого ребенка?
 
-
 \begin{sol}
   $1/3$
 \end{sol}
 \end{problem}
+
 \begin{problem}
   Из колоды в 52 карты извлекается одна карта наугад. Являются
 ли события «извлечен туз» и «извлечена пика» независимыми?
-
 
 \begin{sol}
   да
 \end{sol}
 \end{problem}
+
 \begin{problem}
   Из колоды в 52 карты извлекаются по очереди две карты
 наугад. Являются ли события «первая карта — туз» и «вторая
 карта — туз» независимыми?
 
-
 \begin{sol}
   нет, $(4/52)\cdot (3/51)=\P(A\cap B) \neq \P(A)\cdot \P(B)=(4/52)^2$
 \end{sol}
 \end{problem}
+
 \begin{problem}
   Известно, что $\P(A)=0,3$, $\P(B)=0,4$, $\P(C)=0,5$. События
 $A$ и $B$ несовместны, события $A$ и $C$ независимы и
@@ -543,6 +550,7 @@ $\P(B|C)=0,1$. Найдите $\P(A\cup B\cup C)$.
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
  У тети Маши — двое детей, один старше другого. Предположим, что вероятности рождения мальчика и девочки равны и не зависят от дня недели, а пол первого и второго ребенка независимы. Для каждой из четырех ситуаций найдите условную вероятность того, что у тёти Маши есть дети обоих полов.
 \begin{enumerate}
@@ -554,17 +562,12 @@ $\P(B|C)=0,1$. Найдите $\P(A\cup B\cup C)$.
 \item На вопрос: «А правда ли тетя Маша, что у вас есть сын, родившийся в пятницу?» тётя Маша ответила: «Да».
 \end{enumerate}
 
-
-
 \begin{sol}
 $ 2/3 $, $1/2$, $ 1/2 $, $ 14/27 $
 \end{sol}
 \end{problem}
 
 \section{Use Julia/R/python/\ldots or die!}
-
-
-
 
 
 \begin{problem}
