--- a/sem_plan/sem_plan.tex
+++ b/sem_plan/sem_plan.tex
@@ -137,16 +137,18 @@ style=alphabetic]{biblatex}
   \item Работа с нормальным распределением. ЦПТ.
 \end{enumerate}
 
-Размышления:
+При везении:
+
 \begin{itemize}
-  \item при рассмотрении дисперсии, ковариации, корреляции подчёркивать их геометрический смысл.
-  \item Пуассоновский поток: когда?
-  \item Энтропия: когда?
-  \item Байесовский подход: уже же можно? почему он в конце?
-  \item Симуляции в R или python: когда?
+  \item геометрический смысл дисперсии, ковариации, корреляции
+  \item успеть пуассоновский поток
+  \item рядом с дисперсией рассказать энтропию
+  \item начать байесовский подход сейчас, а не в 4м модуле
+  \item Симуляции R/python/julia
   \item Перенести рождение нормального распределения в многомерное?
-  \item Дифференциальные уравнения методом Крофтона
+  \item рассказать про дифференциальные уравнения методом Крофтона
 \end{itemize}
+
 
 Контрольная 2.
 
@@ -163,14 +165,8 @@ style=alphabetic]{biblatex}
   \item Дельта метод.
   \item Проекции и выборочные характеристики.
   \item Проекции и хи-квадрат распределение.
-  \item Распределение Стьюдента и Фишера. Доказательства!
+  \item Распределение Стьюдента и Фишера. С доказательствами!
 \end{enumerate}
-
-Размышления:
-\begin{itemize}
-  \item Стьюдент и Фишер: доказывать, что такие-то выражения имеют распределение Стьюдента или Фишера. Ввыодить их геометрический смысл.
-  Спрос на доказательства мал перед кр?
-\end{itemize}
 
 Контрольная 3.
 
@@ -191,14 +187,12 @@ style=alphabetic]{biblatex}
 
 Финальный экзамен.
 
-Размышления:
+При везении:
 
 \begin{itemize}
-  \item Когда компьютерные занятия? В конце некоторых семинаров по чуть-чуть?
-  \item Бутстрэп?
-  \item Как-то скучно звучит, если одни тесты. Где идеи?
-  \item Практика MCMC через rethinking или лучше brms?
-  \item MCMC погибает в курсе метрики?
+  \item бутстрэп
+  \item меньше готовых тестов и больше идей
+  \item практика MCMC через rethinking + brms или pymc3/4?
 \end{itemize}
 
 
