--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -106,6 +106,21 @@
 \protect \hypertarget {soln:2.16}{}
 \begin{solution}{{2.16}}
 \end{solution}
+\protect \hypertarget {soln:2.17}{}
+\begin{solution}{{2.17}}
+\begin{enumerate}
+  \item Выбрать три, чтобы взять, или выбрать семь, чтобы не взять.
+  \item Число дорог с 11 ходами вниз и 4 вправо равно сумму числа дорог.
+  \item Число всех подмножеств в множестве из 4-х элементов.
+  \item Из 10 человек хотим выбрать одного лидера и 3-х помощников.
+  \item Из 10 человек хотим выбрать 3-х орлов и 2-х слонов.
+  \item Число всех подмножеств с одним лидером в множестве из 5-ти элементов.
+\end{enumerate}
+
+\end{solution}
+\protect \hypertarget {soln:2.18}{}
+\begin{solution}{{2.18}}
+\end{solution}
 \protect \hypertarget {soln:3.1}{}
 \begin{solution}{{3.1}}
   $\P(A\mid B)=\frac{\P(A \cap B)}{\P(B)}= \frac{1/3}{1/6+1/3}=2/3$
