--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -403,8 +403,53 @@ $\P(\{b,c\})=0,7$. Найдите $\P(\{a\})$, $\P(\{b\})$, $\P(\{c\})$
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
 \begin{problem}
  Исследовательница Мишель хочет встать утром с правой ноги с вероятностью $1/\sqrt{2}$, и с левой с вероятностью $1 - 1/\sqrt{2}$. Однако для проведения случайных экспериментов у неё есть только одна правильная монетка. Как с помощью правильной монетки ей добиться цели?
+
+\begin{sol}
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+Докажите каждое равенство словами, без использования факториалов.
+Затем обобщите каждое равенство, добавив туда $n$, $k$ и суммы.
+\begin{enumerate}
+  \item $\binom{10}{7} = \binom{10}{3}$
+  \item $\binom{10}{3} + \binom{10}{4} = \binom{11}{4}$
+  \item $\binom{4}{0} + \binom{4}{1} + \binom{4}{2} + \binom{4}{3} + \binom{4}{4} = 2^4$
+  \item $ 4 \binom{10}{4} = 10 \binom{9}{3}$
+  \item $\binom{10}{3}\binom{7}{2} = \binom{10}{2}\binom{8}{3}$
+  \item $1\cdot \binom{5}{1} + 2\cdot \binom{5}{2} + 3\cdot \binom{5}{3} + 4\cdot\binom{5}{4} + 5\cdot \binom{5}{5} = 5 \cdot 2^4$
+  \item $\binom{2}{2} + \binom{3}{2} + \binom{4}{2} + \binom{5}{2} = \binom{6}{3}$
+  \item $\binom{4}{0}\binom{5}{3} + \binom{4}{1}\binom{5}{2} +  \binom{4}{2}\binom{5}{1} +  \binom{4}{3}\binom{5}{0} =\binom{9}{3}$
+  \item $\binom{4}{0}^2 + \binom{4}{1}^2 + \binom{4}{2}^2 + \binom{4}{3}^2 + \binom{4}{4}^2 = \binom{8}{4}$
+\end{enumerate}
+
+\begin{sol}
+\begin{enumerate}
+  \item Выбрать три, чтобы взять, или выбрать семь, чтобы не взять.
+  \item Число дорог с 11 ходами вниз и 4 вправо равно сумму числа дорог.
+  \item Число всех подмножеств в множестве из 4-х элементов.
+  \item Из 10 человек хотим выбрать одного лидера и 3-х помощников.
+  \item Из 10 человек хотим выбрать 3-х орлов и 2-х слонов.
+  \item Число всех подмножеств с одним лидером в множестве из 5-ти элементов.
+\end{enumerate}
+
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+Объясните каждую интерпретацию словами, без использования факториалов.
+\begin{enumerate}
+  \item $\binom{10}{4}$ — количество строк из 4 единиц и 6 нулей
+  \item $\binom{7}{4}$ — количество строк из 4 единиц и 6 нулей, в которых единицы не идут подряд
+  \item $\binom{10}{4}$ — число способов раздать 4 яблока 10 людям, не дав никому больше одного
+  \item $\binom{13}{4}$ — число способов раздать 4 яблока 10 людям
+\end{enumerate}
 
 \begin{sol}
 \end{sol}
