--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -137,10 +137,32 @@
 \end{solution}
 \protect \hypertarget {soln:3.4}{}
 \begin{solution}{{3.4}}
+Обозначим: $X$ — количество попавшихся тузов, $S$ — количество попавшихся тузов пик.
+
 \[
 \P(X = 2) = \frac{C_4^2 C_{48}^{11}}{C_{52}^{13}}
 \]
 $\P(X\geq 2 \mid X\geq 1)=\frac{\P(X \geq 2)}{\P(X \geq 1)}= \approx 0.37$
+
+
+Можно представить, что мы берём первые 13 карт из случайно перемешанной колоды.
+Поэтому вероятность того, что туз пик попадет на одно из этих 13-и мест равна:
+\[
+\P(S=1) = \frac{13}{52}
+\]
+
+Далее,
+\[
+\P(X\geq 2 \mid S = 1) = \frac{\P(S=1, X\geq 2)}{\P(S=1)}
+\]
+
+Ищем вероятность в числителе. Есть много способов, один из:
+\[
+\P(S=1, X\geq 2) = \P(S=1) - \P(S=1, X=1) = \frac{13}{52} - \frac{1\cdot C_{48}^{12}}{C_{52}^{13}}
+\]
+
+Итого, $\P(X \geq 2 \mid S = 1) \approx 0.56$.
+
 \end{solution}
 \protect \hypertarget {soln:3.5}{}
 \begin{solution}{{3.5}}
